--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuro Vision AI Security</title>
+    <title>Neuro Vision</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,9 +21,9 @@
             <img src="assets\imgs\logo.png" alt="Neuro Vision Logo" class="logo-img">
         </div>
         <div class="menu-items">
-            <a href="#services" class="nav-item">Services</a>
-            <a href="#about" class="nav-item">Company</a>
-            <a href="#contact" class="nav-item">Contact Us</a>
+            <a href="#services" class="nav-item">SERVICES</a>
+            <a href="#about" class="nav-item">COMPANY</a>
+            <a href="#contact" class="nav-item">CONTACT US</a>
         </div>
     </nav>
     
